/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/current/userguide/userguide.html
 */

plugins {
	id 'java'
	id 'application'
	id 'eclipse'
	id 'com.gradleup.shadow' version '8.3.9'
}

repositories {
	// Use Maven Central for resolving dependencies.
	mavenCentral()
}

dependencies {
	// Use JUnit Jupiter for testing.
	testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'

	// This dependency is used internally, and not exposed to consumers on their own compile classpath.
	implementation 'com.google.guava:guava:31.1-jre'
	implementation 'com.google.code.gson:gson:2.11.0'
	implementation 'org.apache.commons:commons-compress:1.26.2'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

tasks.named('test') {
	// Use JUnit Platform for unit tests.
	useJUnitPlatform()
}

tasks.named('shadowJar', com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar) {
	archiveBaseName = 'CaDoodleUpdater'
	archiveClassifier = ''
	archiveVersion = ''
	manifest {
		attributes(
			'Implementation-Title': 'BowlerStudioUpdater',
			'Implementation-Version': '0.0.1',
			'Main-Class': 'com.commonwealthrobotics.Main'
		)
	}
}

application {
	mainClass = 'com.commonwealthrobotics.Main'
}

// Create dependencies structure
startScripts.dependsOn shadowJar
startShadowScripts.dependsOn jar
startShadowScripts.dependsOn shadowJar

// Point the run/start scripts to the fat jar
application {
	mainClass = 'com.commonwealthrobotics.Main'
	applicationDefaultJvmArgs = []
	applicationDistribution.from(shadowJar) {
		into 'lib'
	}
}

// Use only the fat Jar
distributions {
	main {
		contents {
			exclude { f -> f.name.equals('CaDoodleUpdater.jar') && !f.name.contains('shadow') }
			from shadowJar
		}
	}
}